--- a/day2/resume.html
+++ b/day2/resume.html
@@ -1,17 +1,40 @@
 <html>
     <head>
         <title>个人简历</title>
+        <style type="text/css">
+            h1 {
+                text-align: center;
+                font-size:24px;
+            }
+
+            h2 {
+                font-size:22px;
+                text-align:center;
+            }
+
+            h3 {
+                font-size:20px;
+            }
+
+            p{
+                font-size:18px;
+            }
+
+            ul li{
+                font-size:18px;
+            }
+        </style>
     </head>
     <body>
         <h1>个人简历</h1>
         <hr/>
         <h2>基本信息</h2>
         <hr/>
-        <pre></pre><p>姓 名：王若枫</p>
+        <p>姓 名：王若枫</p>
         <p>民 族：汉族</p>
         <p>电 话: 18583697549</p>
         <p>邮 箱：710862119@qq.com</p>
-        <address>家庭地址：上海市浦东新区</address>
+        <p>家庭地址：上海市浦东新区</p>
         <p>毕 业 院 校：重庆邮电大学</p>
         <p>学 历：本科</p>
 
